1.7.0
=====
(Flavio Botelho)
- [DS-563] Multiple spaces in between words in advanced search will make the search return nothing

(Vladislav Zhivkov, Claudia Juergen)
- [DS-625] Bulgarian translation of the jspui for DSpace 1.6.0
- [DS-650] Bulgarian translation of the jspui for DSpace 1.6.2

(Pere Villega)
- [DS-643] New testing framework (GSoC 2010)

(Tim Donohue)
- [DS-648] Modern Browsers are not identified in XMLUI main sitemap.xmap
- [DS-466] Add ability to export/import entire Community/Collection/Item structure (for easier backups, migrations, etc.)

(Claudia Juergen)
- [DS-569] Trailing white spaces lead to wrong order of texts in browse
- [DS-596] Cannot Delete Community which has two or more levels of SubCommunities
- [DS-628] Make the timeout for the extended resolver dnslookup configurable

(Erick Rocha Fonseca, Claudia Juergen)
- [DS-563] Brazilian Portuguese (pt_BR) translation for XML-UI 1.6.2

(Peter Dietz)
- [DS-549] Added <a name> anchors in XMLUI

(Stuart Lewis, Christophe Dupriez)
- [DS-686] Incorrect use of UTF8 in DSpaceCSV

(Stuart Lewis)
- [DS-467] Consider making the JSPUI styles.css.jsp a static file

1.6.2
=====

(Tim Donohue, Kim Shepherd, Keith Gilbertson, Stuart Lewis)
- [DS-584] start-handle-server script broken - Error in launcher.xml: Invalid class name

(Stuart Lewis)
- [DS-607] Invalid identifiers not escaped
- [DS-608] Batch metadata import missing item headers

(Ivan Masar, Claudia Juergen)
- [DS-567] Czech localization of 1.6.0
- [DS-595] Czech localization of 1.6.1

1.6.1
=====

(Mark Diggory)
- [DS-571] Upgrade DSpace Services to next release 2.0.1

(Dale Poulter)
- [DS-557] LC Authority Names - Lookup Feature - names w/o dates

(Paulo Jobim)
- [DS-471] Accessing site-level 'mets.xml' in XMLUI doesn't work properly for handle prefixes with periods (e.g. 2010.1)

(Yin Yin Latt)
- [DS-565] Empty description column in Itemview Page - General-Handler.xsl