@@ -1,5 +1,8 @@
 1.7.0
 =====
+(Kim Shepherd)
+- [DS-688] AuthorizeManager.isAdmin(Context, DSpaceObject) throws exception when EPerson is null
+
 (Flavio Botelho)
 - [DS-563] Multiple spaces in between words in advanced search will make the search return nothing
 
